# farssh

./: LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: aws.yaml  image.yaml  s3.yaml
client/: .gitignore  farssh  pyproject.toml
client/src/farssh/: __main__.py  args.py  aws.py  commands.py  const.py  main.py  ssh.py
cloudformation/: farssh.yaml
image/: Dockerfile  entrypoint  motd  terminator
tests/: TESTING.md
